syntax = "proto3";

package userInfo;

message Error {
  string code = 1;
  string message = 2;
}

enum ProfileType {
  PARENT = 0;
  SITTER = 1;
}

message User {
  int32   id = 1;
  string  phone_number = 2;
  string  password = 3;
  int32  sitterProfileId = 4;
  int32  parentProfileId = 5;
  string  first_name = 6;
  string  last_name = 7;
  string  second_name = 8;
  string birthDate = 9;
  string  email = 10;
  string  avatar_url = 11;
}

message UserResponse {
  optional User data = 1;
  optional Error _error = 100;
}

message UpdateUserRequest {
  int32   id = 1;
  string  phone_number = 2;
  string  password = 3;
  int32  sitterProfileId = 4;
  int32  parentProfileId = 5;
  string  first_name = 6;
  string  last_name = 7;
  string  second_name = 8;
  string birthDate = 9;
  string  email = 10;
}

message GetUserByIdRequest {
  int32 id = 1;
}

message CheckJWTRequest {
  string token = 1;
}

message UploadAvatarRequest {
  int32  id = 1;
  string filename = 2;
  bytes  fileData = 3;
}

message GetByProfileRequest {
  int32  id = 1;
  ProfileType profileType = 2;
}

message UploadAvatar {
  string avatarUrl = 1;
}

message UploadAvatarResponse {
  optional UploadAvatar data = 1;
  optional Error _error = 100;
}

service UserInfoRpcService {
  rpc GetUserById (GetUserByIdRequest) returns (UserResponse);
  rpc CheckJWT (CheckJWTRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc UploadAvatar (UploadAvatarRequest) returns (UploadAvatarResponse);
  rpc GetByProfile (GetByProfileRequest) returns (UserResponse);
}
